--- a/site/_static/leftfield.css
+++ b/site/_static/leftfield.css
@@ -55,7 +55,7 @@
         margin-right: 1rem;
     }
 
-    /* wrap main content when it doesn't fit in the windopw   
+    /* wrap main content when it doesn't fit in the window   
     see https://stackoverflow.com/questions/20149715/internet-explorer-11-word-wrap-is-not-working */
     .bd-main {
         width: 100%;
@@ -66,7 +66,6 @@
         width: 100%;
     }
 }
-
 
 /* display body content in safari 9-10 & chrome 29 (+?) */
 /* .bd-main .bd-content {
@@ -207,16 +206,6 @@ ul.bd-breadcrumbs li.breadcrumb-item a {
     display: flex;
 }
 
-/* stack header section links horizontally. */
-/* When screen >= 960px, display header items using flex or inline-block */
-@media(min-width:960px) {
-    .bd-header .navbar-header-items {
-        display: inline-block;
-        /* display: -webkit-flex; */
-        display: flex;
-    }
-}
-
 /* items that pydata-sphinx-theme sets to `display: flex` are set to `display: inline-block` here,
 following the selection patterns of the theme */
 .navbar-persistent--mobile,
@@ -234,7 +223,7 @@ following the selection patterns of the theme */
     /* `vertical-align: auto` is default but mis-calculates element heights in some browsers,  
     so it is forced to middle here. */
     vertical-align: middle;
-    outline: 1px dashed red;
+    outline: 1px solid red;
 }
 
 /* repeat pydata-sphinx-theme rule(s) for turning off "mobile" res sidebar toggle & search button 
@@ -308,10 +297,9 @@ bd-header__inner is included in the list.*/
     /* nav-item not set in theme but include it here to horizontally stack e.g. section or icon links */
     .bd-header .nav-item {
         display: flex;
-        outline: 1px dashed pink;
         float: unset;
         vertical-align: unset;
-        /* TODO: is unset the right choice here and below? */
+        outline: 1px dashed red;
     }
 
     /* repeat pydata-sphinx-theme rule(s) for turning off "mobile" res sidebar toggle & search button 
@@ -340,7 +328,7 @@ bd-header__inner is included in the list.*/
         -ms-transform: unset;
         -webkit-transform: unset;
         transform: unset;
-        outline: 1px solid turquoise;
+        outline: 1px dashed green;
     }
 }
 
@@ -374,7 +362,12 @@ bd-header__inner is included in the list.*/
 
 /* sphinx-design styles for browsers with flex wrapping (and @support) support */
 @supports(flex-wrap: wrap) {
-    .sd-d-flex-row {
+    .bd-main {
+        display: flex;
+        outline: 1px solid green;
+    }
+
+   .sd-d-flex-row {
         /* override `display: inline-block !important` above */
         display: flex !important;
         /* remove the margin workaround above */
@@ -388,6 +381,29 @@ bd-header__inner is included in the list.*/
     }
 }
 
+
+/* Center the main content section for browsers without flex support */
+.bd-main .bd-content {
+    display: block;
+}
+
+.bd-main .bd-content .bd-article-container {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+@supports (display: flex) and (justify-content: center) {
+    .bd-main .bd-content {
+        display: flex;
+    }
+    
+    .bd-main .bd-content .bd-article-container {
+        display: flex;
+        margin-left: unset;
+        margin-right: unset;
+    }
+}
 /* turn off header section and icon links if flex is not supported */
 /*.bd-header .navbar-header-items__center,
 .bd-header .navbar-header-items__end {
